[gd_scene load_steps=15 format=3 uid="uid://do3rsr7idkevg"]

[ext_resource type="FontFile" uid="uid://cccwm5ryd6bf2" path="res://Melted Monster.ttf" id="1_ecc2j"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_hted8"]
[ext_resource type="Texture2D" uid="uid://c2m8sbipm8oaf" path="res://Parallax/Garden_s Forest/background4.png" id="3_1wgrd"]
[ext_resource type="Texture2D" uid="uid://b06tbaf830ici" path="res://Art/GUI Art/Play Button.png" id="3_ji7x0"]
[ext_resource type="Texture2D" uid="uid://htj5heakbj0a" path="res://Art/GUI Art/Pressed Play Button.png" id="4_8qde1"]
[ext_resource type="Texture2D" uid="uid://ckquxv8pdnx0o" path="res://Parallax/Garden_s Forest/background3.png" id="4_yb8cr"]
[ext_resource type="Texture2D" uid="uid://ch8vs2e05o6ep" path="res://Art/GUI Art/Credits Button.png" id="5_h573q"]
[ext_resource type="Texture2D" uid="uid://6j2454jial6c" path="res://Parallax/Garden_s Forest/background2.png" id="5_tpn4b"]
[ext_resource type="Texture2D" uid="uid://c0ycrv8ugh0x5" path="res://Art/GUI Art/Pressed Credits Button.png" id="6_2jm8d"]
[ext_resource type="Texture2D" uid="uid://38g7ge6orvdd" path="res://Parallax/Garden_s Forest/background1.png" id="6_ch477"]
[ext_resource type="Texture2D" uid="uid://cgvy4ogi3ouma" path="res://Art/GUI Art/Settings Button.png" id="7_gd01a"]
[ext_resource type="Texture2D" uid="uid://b5gtehmr10mr2" path="res://Art/GUI Art/Pressed Settings Button.png" id="8_ajk6t"]
[ext_resource type="Texture2D" uid="uid://dx7guousarju0" path="res://Art/GUI Art/Quit Button.png" id="9_6nyhq"]
[ext_resource type="Texture2D" uid="uid://dgdoj41716x13" path="res://Art/GUI Art/Pressed Quit Button.png" id="10_xbeis"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_hted8")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -221.0
offset_top = -109.0
offset_right = 2236.0
offset_bottom = 1307.0
color = Color(0.180392, 0, 0.309804, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ecc2j")
theme_override_font_sizes/font_size = 150
text = "The Lost Woods"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 70

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 450
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ji7x0")
texture_pressed = ExtResource("4_8qde1")

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="CreditsButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer4"]
layout_mode = 2
texture_normal = ExtResource("5_h573q")
texture_pressed = ExtResource("6_2jm8d")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer6" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 450
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/MarginContainer6"]
layout_mode = 2
texture_normal = ExtResource("7_gd01a")
texture_pressed = ExtResource("8_ajk6t")

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="QuitButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/MarginContainer5"]
layout_mode = 2
texture_normal = ExtResource("9_6nyhq")
texture_pressed = ExtResource("10_xbeis")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true
follow_viewport_scale = 0.75

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(20, 47)
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(500, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1256, 826.333)
scale = Vector2(7.02604, 7.76889)
texture = ExtResource("3_1wgrd")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(20, 47)
motion_scale = Vector2(0.1, 0)
motion_mirroring = Vector2(500, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(756.667, 514.333)
scale = Vector2(4.36198, 5.41333)
texture = ExtResource("4_yb8cr")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(20, 47)
motion_scale = Vector2(0.2, 0)
motion_mirroring = Vector2(500, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(756.667, 514.333)
scale = Vector2(4.36198, 5.41333)
texture = ExtResource("5_tpn4b")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(18, 46)
motion_scale = Vector2(0.3, 0)
motion_mirroring = Vector2(500, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(758.667, 515.333)
scale = Vector2(4.36198, 5.41333)
texture = ExtResource("6_ch477")

[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer/PlayButton" to="." method="_on_texture_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer4/CreditsButton" to="." method="_on_credits_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/MarginContainer6/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/MarginContainer5/QuitButton" to="." method="_on_quit_button_button_up"]
